# pypg-django

./: .gitignore  README.md  makefile  pyproject.toml  requirements-dev.txt
.github/: test.yaml
src/pypg_django/: __init__.py  property.py  property_class.py
tests/: .env  pyproject.toml  tests.py
tests/pypg_django_test/: manage.py
tests/pypg_django_test/test_app/: apps.py  models.py  tests.py
tests/pypg_django_test/test_app/migrations/: 0001_initial.py
tests/pypg_django_test/test_project/: asgi.py  settings.py  urls.py  wsgi.py
